--- a/AMONIC/AMONIC.csproj
+++ b/AMONIC/AMONIC.csproj
@@ -72,6 +72,9 @@
     <Compile Include="Airports.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="BookingWindows.xaml.cs">
+      <DependentUpon>BookingWindows.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CabinTypes.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -138,6 +141,10 @@
     <Compile Include="Users.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Page Include="BookingWindows.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ManagerMainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
